前三个已经差不多了